--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,12 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <title>CabPro - Carpool Smarter</title>
+    <meta name="description" content="Save money, reduce traffic, and ride together with CabPro's smart carpooling platform. Automated matching, safe groups, and real-time notifications." />
+    <meta name="author" content="CabPro" />
+
+    <meta property="og:title" content="CabPro - Carpool Smarter" />
+    <meta property="og:description" content="Save money, reduce traffic, and ride together with CabPro's smart carpooling platform." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
+
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
